src/objects/Apttus_Config2__OrderLineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Sub_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Order Line Items (Sub Sub Category)</relationshipLabel>
        <relationshipName>Sub_Sub_Category_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Subject__c</fullName>
        <description>This is the Subject</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TAXO__c</fullName>
        <description>Sum of TAXes out of SAP</description>
        <label>Tax O</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TS_Coverage__c</fullName>
        <formula>IF (APTS_Option_Group_Text__c = &apos;Technical Service&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TS Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Third_Party_Machine_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Third-Party Machine Indicator</description>
        <label>Third-Party Machine Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_To_Be_Sent_As_L1_Bundle__c</fullName>
        <description>This is the To be sent as L bundle</description>
        <formula>IF (OR 
((ISBLANK(Apttus_Config2__OptionId__c) &amp;&amp; ( ISPICKVAL(APTS_Type_of_Contract__c, &apos;Standard Buy&apos;)) &amp;&amp; ( ISPICKVAL( Apttus_Config2__ChargeType__c , &apos;Sales Price&apos;))), 
(ISBLANK(Apttus_Config2__OptionId__c) &amp;&amp; ( ISPICKVAL(APTS_Type_of_Contract__c, &apos;Rent/Lease&apos;)) &amp;&amp; ( ISPICKVAL( Apttus_Config2__ChargeType__c , &apos;Rental Price&apos;))), 
(ISBLANK(Apttus_Config2__OptionId__c) &amp;&amp; ( ISPICKVAL(APTS_Type_of_Contract__c, &apos;Free on Loan&apos;)) &amp;&amp; ( ISPICKVAL( Apttus_Config2__ChargeType__c , &apos;Sales Price&apos;))), 
(ISBLANK(Apttus_Config2__OptionId__c) &amp;&amp; ( ISPICKVAL(APTS_Type_of_Contract__c, &apos;Trial&apos;)) &amp;&amp; ( ISPICKVAL( Apttus_Config2__ChargeType__c , &apos;Sales Price&apos;))), 
(ISBLANK(Apttus_Config2__OptionId__c) &amp;&amp; ( ISPICKVAL(APTS_Type_of_Contract__c, &apos;Seasonal&apos;)) &amp;&amp; ( ISPICKVAL( Apttus_Config2__ChargeType__c , &apos;Sales Price&apos;))), 
(ISBLANK(Apttus_Config2__OptionId__c) &amp;&amp; ( ISPICKVAL(APTS_Type_of_Contract__c, &apos;Consumption&apos;)) &amp;&amp; ( ISPICKVAL( Apttus_Config2__ChargeType__c , &apos;Usage Fee&apos;)))) 
, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Be Sent As L1 Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Track_Trace__c</fullName>
        <description>This is the Track&amp;Trace</description>
        <label>Track &amp; Trace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Track_and_Trace_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Track&amp;Trace</description>
        <label>Track&amp;Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Treated_By_Activation_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treated By Activation Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Type_Of_Contact_IC__c</fullName>
        <formula>IF(
	OR(ISNULL(Apttus_Config2__DerivedFromId__r.Apttus_Config2__AttributeValueId__c), 
           ISBLANK(Apttus_Config2__DerivedFromId__r.Apttus_Config2__AttributeValueId__c)),

        CASE(
            IF( 
	        FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c) &gt; 0, 
		TRIM(
		     LEFT(Apttus_Config2__ClassificationHierarchy__c, 
	             FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c)-1)
		), 
		Apttus_Config2__ClassificationHierarchy__c 
	    ), 
            &apos;Coffee&apos;, &apos;Ingredient&apos;, 
            &apos;Tea&apos;, &apos;Ingredient&apos;,
	    &apos;&amp;More&apos;, &apos;Ingredient&apos;,
	    &apos;Services&apos;, &apos;Services&apos;,
            &apos;Spare Parts&apos;, &apos;Spare Parts&apos;,
            &apos;&apos;
	), 
	TEXT(Apttus_Config2__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Of Contact IC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Type_Of_Contract_IC__c</fullName>
        <formula>IF(
	OR(ISNULL(Apttus_Config2__DerivedFromId__r.Apttus_Config2__AttributeValueId__c), 
           ISBLANK(Apttus_Config2__DerivedFromId__r.Apttus_Config2__AttributeValueId__c)),

if(AND(ISPICKVAL(Apttus_Config2__ProductId__r.Family, &apos;SAP_04&apos;),Apttus_Config2__ProductId__r.APTS_Material_Type__c = &apos;ZFIN&apos;),&apos;Ingredient&apos;,CASE( 
            IF( 
	        FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c) &gt; 0, 
		TRIM(
		     LEFT(Apttus_Config2__ClassificationHierarchy__c, 
	             FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c)-1)
		), 
		Apttus_Config2__ClassificationHierarchy__c 
	    ), 
            &apos;Coffee&apos;, &apos;Ingredient&apos;, 
            &apos;Tea&apos;, &apos;Ingredient&apos;,
	    &apos;&amp;More&apos;, &apos;Ingredient&apos;,
&apos;Concepts&apos;, &apos;Ingredient&apos;, 
	    &apos;Services&apos;, &apos;Services&apos;,
            &apos;Spare Parts&apos;, &apos;Spare Parts&apos;,
            &apos;&apos;
)),
	TEXT(Apttus_Config2__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Of Contract IC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Type_of_Contract__c</fullName>
        <description>The Type of contract</description>
        <label>Type Of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free On Loan</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>RentBuy</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Consumption</fullName>
                    <label>Consumption Model</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_VATO__c</fullName>
        <description>VAT amount calculated in SAP</description>
        <label>VAT</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Visiting_Hours__c</fullName>
        <description>This is the Visiting Hours</description>
        <label>Visiting Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Volume_Size_Crockery__c</fullName>
        <description>This is the Volume Size Crockery</description>
        <label>Volume Size Crockery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Workplace_indicator__c</fullName>
        <description>This field, shall be updated by SAP.</description>
        <inlineHelpText>Workplace Indicator</inlineHelpText>
        <label>Workplace indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Workshop_Time__c</fullName>
        <description>This is the Workshop Time</description>
        <label>Workshop Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Workshop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Is Workshop Required</description>
        <label>Workshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_YRF0_Periodic_Rental_Fee__c</fullName>
        <formula>IF((ISPICKVAL(APTS_SAP_OrderType__c, &apos;XC01&apos;)|| ISPICKVAL(APTS_SAP_OrderType__c, &apos;XC09&apos;)), 
	0, 
	IF(ISPICKVAL(Apttus_Config2__ChargeType__c, &apos;Rental Fee&apos;),
		IF(AND(ISPICKVAL(APTS_SAP_OrderType__c, &apos;XD09&apos;), NOT(ISNULL( APTS_AdminOrderProrationRatio__c ))),
			Apttus_Config2__AssetLineItemId__r.Apttus_Config2__BasePrice__c*APTS_AdminOrderProrationRatio__c, 
			IF(ISBLANK(Apttus_Config2__BasePriceOverride__c) || Apttus_Config2__BasePriceOverride__c = 0, 
				Apttus_Config2__BasePrice__c, 
				Apttus_Config2__BasePriceOverride__c 
			)
		),	
	0)
)</formula>
        <label>YRF0 Periodic Rental Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_YSF1_Periodic_ASP_Fee__c</fullName>
        <formula>IF((ISPICKVAL(APTS_SAP_OrderType__c, &apos;XC01&apos;) || ISPICKVAL(APTS_SAP_OrderType__c, &apos;XC09&apos;)),
	0, 
	IF(ISPICKVAL(Apttus_Config2__ChargeType__c, &apos;Additional Service Fee&apos;),
		IF(AND(ISPICKVAL(APTS_SAP_OrderType__c, &apos;XD09&apos;), NOT(ISNULL( APTS_AdminOrderProrationRatio__c ))),
			Apttus_Config2__AssetLineItemId__r.Apttus_Config2__BasePrice__c*APTS_AdminOrderProrationRatio__c, 
			IF(ISBLANK(Apttus_Config2__BasePriceOverride__c) || Apttus_Config2__BasePriceOverride__c = 0, 
				Apttus_Config2__BasePrice__c, 
				Apttus_Config2__BasePriceOverride__c 
			)
		),	
	0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YSF1 Periodic ASP Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Z030_GSV_Consumption__c</fullName>
        <label>Z030 GSV Consumption</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Z030_GSV_override__c</fullName>
        <formula>IF(
OR (ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &apos;XD12&apos;),
ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &apos;XC09&apos;)),
APTS_Z030_GSV_Consumption__c,
0
)</formula>
        <label>Z030 GSV override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ZX10__c</fullName>
        <label>100% Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_counter_readings_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>counter readings required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AgreementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement line item</description>
        <inlineHelpText>ID of the associated agreement line item</inlineHelpText>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActivatedDate__c</fullName>
        <description>The date the order item is ready for activation. The order item is activated on this date.</description>
        <inlineHelpText>The date the order item is ready for activation. The order item is activated on this date.</inlineHelpText>
        <label>Ready for Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Base Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AmendmentEffectiveDate__c</fullName>
        <description>The date this amendment is effective</description>
        <inlineHelpText>The date this amendment is effective</inlineHelpText>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the asset associated with the product</description>
        <inlineHelpText>ID of the asset associated with the product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item.</description>
        <inlineHelpText>ID of the associated asset line item.</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <label>Attribute Value</label>
        <referenceTo>Apttus_Config2__OrderProductAttributeValue__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recurring item would auto renew at end of term</description>
        <inlineHelpText>Indicates whether the recurring item would auto renew at end of term</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalTerm__c</fullName>
        <description>The auto renewal term</description>
        <inlineHelpText>The auto renewal term</inlineHelpText>
        <label>Auto Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCostOverride__c</fullName>
        <description>The base cost overridden by the user</description>
        <inlineHelpText>The base cost overridden by the user</inlineHelpText>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <inlineHelpText>The base cost is Cost + Automatic Adjustments for individual products and options</inlineHelpText>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <inlineHelpText>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</inlineHelpText>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Term (if applicable) X (Base Price + Price Adjustment) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceOverride__c</fullName>
        <description>The base price overridden by the user</description>
        <inlineHelpText>The base price overridden by the user</inlineHelpText>
        <label>Base Price (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product.</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items (Base Product)</relationshipLabel>
        <relationshipName>BaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Bill To)</relationshipLabel>
        <relationshipName>OrderLineItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Bill on Ready for Billing Date</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CancelledDate__c</fullName>
        <description>The date when the order line item was cancelled</description>
        <inlineHelpText>The date when the order line item was cancelled</inlineHelpText>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChangeStatus__c</fullName>
        <description>The order line change status</description>
        <inlineHelpText>The order line change status</inlineHelpText>
        <label>Change Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type associated with the product or service</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rental Fee</fullName>
                </value>
                <value>
                    <fullName>Usage Fee</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Additional Service Fee</fullName>
                </value>
                <value>
                    <fullName>Sales Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationHierarchy__c</fullName>
        <description>The category hierarchy</description>
        <label>Category Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product category</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>Memo text entered by the user</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CommitmentQuantity__c</fullName>
        <description>The quantity commitment associated with the product or option</description>
        <inlineHelpText>The quantity commitment associated with the product or option</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumbers__c</fullName>
        <description>A comma separated list of contract numbers associated with the line item</description>
        <inlineHelpText>A comma separated list of contract numbers associated with the line item</inlineHelpText>
        <label>Contract Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Cost__c</fullName>
        <description>The cost for the product or service with no adjustments</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCode__c</fullName>
        <description>The incentive coupon code</description>
        <inlineHelpText>The incentive coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaPrice__c</fullName>
        <description>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaQuantity__c</fullName>
        <description>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DerivedFromId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the line item this was derived from</description>
        <label>Derived From</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Derived Order Line Items</relationshipLabel>
        <relationshipName>DerivedOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The end date for products and services</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedCost__c</fullName>
        <description>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</description>
        <inlineHelpText>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedDescription__c</fullName>
        <description>The extended line description</description>
        <label>Extended Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Term X (Base Price + Price Adjustment + Option Price)</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedQuantity__c</fullName>
        <description>The extended quantity is Quantity X Parent Quantity)</description>
        <inlineHelpText>The extended quantity is Quantity X Parent Quantity)</inlineHelpText>
        <label>Extended Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
</CustomObject>